--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,15 +1,15 @@
 spring:
   config:
     activate:
-      on-profile: local
+      on-profile: dev
   sql:
     init:
-      mode: always
+      mode: never
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/uket?useSSL=false&allowPublicKeyRetrieval=true
-    username: ${LOCAL_MYSQL_USERNAME}
-    password: ${LOCAL_MYSQL_PASSWORD}
+    url: ${DEV_MYSQL_URL}
+    username: ${DEV_MYSQL_USERNAME}
+    password: ${DEV_MYSQL_PASSWORD}
     hikari:
       maximum-pool-size: 40
   jpa:
@@ -19,6 +19,32 @@ spring:
     properties:
       hibernate:
         show_sql: true
+  cloud:
+    aws:
+      s3:
+        access-key: ${AWS_S3_ACCESS_KEY}
+        secret-key: ${AWS_S3_SECRET_KEY}
+        bucket: ${AWS_S3_BUCKET}
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
+      auth-code-expiration-millis: 180000
+  data:
+    redis:
+      host: ${REDIS_AUTH_HOST}
+      port: ${REDIS_AUTH_PORT}
 
 app:
   token:
