--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -48,7 +48,7 @@ spring:
 
 app:
   token:
-    secret-key: testestsetsetsetsetsetsetsetsetestset
+    secret-key: ${JWT_SECRET_KEY}
     expiration:
       access-token-expiration: 600_000
       refresh-token-expiration: 7_200_000
