--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -19,6 +19,10 @@ spring:
     properties:
       hibernate:
         show_sql: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 app:
   token:
