--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,5 @@ ktlint_standard_filename = disabled
 ktlint_standard_property-naming = disabled
 ktlint_standard_enum-entry-name-case = disabled
 ktlint_standard_no-semi = disabled
+ktlint_standard_discouraged-comment-location = disabled
+ktlint_standard_if-else-wrapping = disabled
