--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,12 +13,32 @@ spring:
     hikari:
       maximum-pool-size: 40
   jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     defer-datasource-initialization: true
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
         show_sql: true
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    urls:
+      base-url: ${MAIL_SEND_BASE_URL}
+      image-url: ${MAIL_SEND_IMAGE_URL}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
+      auth-code-expiration-millis: 180000
   data:
     redis:
       host: localhost
