--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -56,3 +56,4 @@ app:
     expiration:
       access-token-expiration: 600_000
       refresh-token-expiration: 7_200_000
+      email-token-expiration: 86_400_000
