[UKET-23] 어드민 사용자 추가 및 메일 발송 API 작성 (#11)
* feat: docker관련 설정

* feat: dev 설정파일 수정

* feat: 불필요한 줄 삭제(ktlint)

* feat: favicon 예외처리

* feat: 메일 template 설정

* feat: 재배포

* feat: userName변경

* feat: 초대장 형식 작성

* feat: redis 의존성 추가

* feat: redis module 추기

* feat: klint 체크 사항 반영

* feat: ktlint 추가 사항 반영

* feat: admin 회원가입 구현

* feat: emailToken 유효기간 설정

* feat: admin TestCode 수정

* feat: testCode ktlint

* feat: login 응답 권한 내용 추가

* feat: testCode application.yml 정보 추가

* feat: AdminTestCode 반환값 수정

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,9 +13,10 @@ spring:
     hikari:
       maximum-pool-size: 40
   jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
@@ -30,6 +31,9 @@ spring:
     port: 587
     username: ${MAIL_USERNAME}
     password: ${MAIL_PASSWORD}
+    urls:
+      base-url: ${MAIL_SEND_BASE_URL}
+      image-url: ${MAIL_SEND_IMAGE_URL}
     properties:
       mail:
         smtp:
@@ -52,3 +56,4 @@ app:
     expiration:
       access-token-expiration: 600_000
       refresh-token-expiration: 7_200_000
+      email-token-expiration: 86_400_000
