feat: qrcode module migration

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -51,3 +51,7 @@ app:
       access-token-expiration: 600_000
       refresh-token-expiration: 7_200_000
       email-token-expiration: 86_400_000
+  qr-code:
+    width: 300
+    height: 300
+    type: png
