--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -39,6 +39,10 @@ app:
       access-token-expiration: 600_000
       refresh-token-expiration: 7_200_000
       email-token-expiration: 86_400_000
+  qr-code:
+    width: 300
+    height: 300
+    type: png
 
 logging:
   level:
