feat: slack 관련 설정 추가

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -39,6 +39,9 @@ app:
       access-token-expiration: 600_000
       refresh-token-expiration: 7_200_000
       email-token-expiration: 86_400_000
+  slack:
+    webhook:
+      url: "test.url"
 
 logging:
   level:
