--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -43,6 +43,12 @@ spring:
     redis:
       host: localhost
       port: 6379
+  cloud:
+    aws:
+      s3:
+        access-key: "test-access-key"
+        secret-key: "test-secret-key"
+        bucket: "test-bucket"
 
 app:
   token:
@@ -61,6 +67,9 @@ app:
     user-info-uri: https://www.googleapis.com/oauth2/v1/userinfo
     client-id: ${GOOGLE_CLIENT_ID}
     client-secret: ${GOOGLE_CLIENT_SECRET}
+  slack:
+    webhook:
+      url: "test.url"
   qr-code:
     width: 300
     height: 300
