--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -46,9 +46,9 @@ spring:
   cloud:
     aws:
       s3:
-        access-key: "test-access-key"
-        secret-key: "test-secret-key"
-        bucket: "test-bucket"
+        access-key: ${AWS_S3_ACCESS_KEY}
+        secret-key: ${AWS_S3_SECRET_KEY}
+        bucket: ${AWS_S3_BUCKET}
 
 app:
   token:
