--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -57,6 +57,7 @@ app:
       access-token-expiration: 600_000
       refresh-token-expiration: 7_200_000
       email-token-expiration: 86_400_000
+      ticket-token-expiration: 1_200_000
   kakao:
     token_uri: https://kauth.kakao.com/oauth/token
     user-info-uri: https://kapi.kakao.com/v2/user/me
