[UKET-100] 어드민 티켓 관련 코드 Migration (#34)
* feat: qr 입장 확인 api migration

* feat: 티켓 상태변경 API migration

* feat: 조회 api migration

* feat: ktlintCheck fix

* feat: searchAllTickets 수정

* feat: ticketSearchType default 지정

* feat: ktlintCheck fix

* feat: test 설정 코드 ticket-expiration 추가

* feat: jwtTicketUitl jwtConfig 추가

* feat: 불필요한 type지정 삭제

* feat: 200 ok 응답 controller 명시

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,7 +3,6 @@ spring:
     url: "jdbc:h2:mem:test"
     username : sa
     password :
-
   jpa:
     show_sql: true
     hibernate:
@@ -45,6 +44,7 @@ app:
       access-token-expiration: 600_000
       refresh-token-expiration: 7_200_000
       email-token-expiration: 86_400_000
+      ticket-token-expiration: 1_200_000
   kakao:
     token_uri: https://kauth.kakao.com/oauth/token
     user-info-uri: https://kapi.kakao.com/v2/user/me
