--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -7,7 +7,7 @@ spring:
       mode: always
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/uket?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/uket?useSSL=false&allowPublicKeyRetrieval=true&rewriteBatchedStatements=true
     username: ${LOCAL_MYSQL_USERNAME}
     password: ${LOCAL_MYSQL_PASSWORD}
     hikari:
