--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -54,7 +54,7 @@ app:
   token:
     secret-key: testestsetsetsetsetsetsetsetsetestset
     expiration:
-      access-token-expiration: 600_000
+      access-token-expiration: 7_200_000
       refresh-token-expiration: 7_200_000
       email-token-expiration: 86_400_000
       ticket-token-expiration: 1_200_000
