--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -49,6 +49,7 @@ spring:
         access-key: ${AWS_S3_ACCESS_KEY}
         secret-key: ${AWS_S3_SECRET_KEY}
         bucket: ${AWS_S3_BUCKET}
+        region: ${AWS_S3_REGION}
 
 app:
   token:
