--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -26,7 +26,7 @@ spring:
         access-key: ${AWS_S3_ACCESS_KEY}
         secret-key: ${AWS_S3_SECRET_KEY}
         bucket: ${AWS_S3_BUCKET}
-        region: ${AWS_S3_REGION}
+
   mail:
     host: smtp.gmail.com
     port: 587
@@ -76,3 +76,5 @@ app:
     width: 300
     height: 300
     type: png
+  s3:
+    deploy-url: ${S3_DEPLOY_URL}
