--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -49,7 +49,6 @@ spring:
         access-key: ${AWS_S3_ACCESS_KEY}
         secret-key: ${AWS_S3_SECRET_KEY}
         bucket: ${AWS_S3_BUCKET}
-        region: ${AWS_S3_REGION}
 
 app:
   token:
@@ -76,3 +75,5 @@ app:
     width: 300
     height: 300
     type: png
+  s3:
+    deploy-url: ${S3_DEPLOY_URL}
