--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -20,6 +20,10 @@ spring:
     properties:
       hibernate:
         show_sql: true
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
   mail:
     host: smtp.gmail.com
     port: 587
