[UKET-136] 알림톡 발송 기능 추가 (#47)
* [UKET-136] 알림톡 발송 기능 추가

* [UKET-136] 주석 추가

* [UKET-136] 로깅 추가

* [UKET-136] 테스트 수정

* [UKET-136] referrer 추

* [UKET-136] 예매완료 알림톡 추가

---------

Co-authored-by: nonaninona <starcraft0529@gmail.com>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -79,3 +79,8 @@ app:
     width: 300
     height: 300
     type: png
+  message:
+    nhn:
+      app-key: ${MESSAGE_SERVICE_APP_KEY}
+      secret-key: ${MESSAGE_SERVICE_SECRET_KEY}
+      sender-key: ${MESSAGE_SERVICE_SENDER_KEY}
