--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -66,7 +66,11 @@ app:
     width: 300
     height: 300
     type: png
-
+  message:
+    nhn:
+      app-key: "test"
+      secret-key: "test"
+      sender-key: "test"
 logging:
   level:
     org.hibernate.SQL: debug # logger에 출력하려면
