--- a/.editorconfig
+++ b/.editorconfig
@@ -20,3 +20,4 @@ ktlint_standard_max-line-length = disabled
 ktlint_standard_argument-list-wrapping = disabled
 ktlint_standard_no-blank-line-in-list = disabled
 ktlint_standard_class-naming = disabled
+ktlint_standard_function-naming = disabled
