--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -63,8 +63,8 @@ app:
     expiration:
       access-token-expiration: 7_200_000
       refresh-token-expiration: 7_200_000
-      email-token-expiration: 864_000_000
-      ticket-token-expiration: 1_200_000
+      email-token-expiration: 86_400_000
+      ticket-token-expiration: 180_000
   kakao:
     token_uri: https://kauth.kakao.com/oauth/token
     user-info-uri: https://kapi.kakao.com/v2/user/me
